/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";
import "google/protobuf/any.proto";



message MarkupUpdate {
    string ownerId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "id"];
    double markup = 2;
}

message DefaultMarkupUpdate {
    double markup = 1;
}
